nxn/test/pass/001-05.nxn
// Explicitly shadow a variable

fn main() i32 {
    let ~x = 0;
    let ~x = 1;
    let  x = 2;
    return 0;
}
