nxn/test/fail/001-001-002.nxn
fn main() i32 {
    let x = 0;          // Previously x is defined here.
    let y = ${
        let x = 1;      // ERROR: Can not redefine x. Shadowing variables is not allowed.
        set x;
    };
    return y;
}
